# network_shooter

./: .gitignore  CMakeLists.txt  README.md
client_source/: controller.cpp  controller.h  game_scenes.cpp  game_scenes.h  main.cpp  network_logic.cpp  network_logic.h
game_logic_source/: actor.cpp  actor.h  actor_factory.cpp  actor_factory.h  actor_update.h  delete_update.h  event.h  event_factory.h  game_logic.cpp  game_logic.h  properties_loader.cpp  properties_loader.h  request.h  variant_map.h
game_logic_source/components/: actor_replace_component.cpp  actor_replace_component.h  animation_component.cpp  animation_component.h  animation_event.h  animation_swapping_component.cpp  animation_swapping_component.h  animation_update.h  bullet_component.cpp  bullet_component.h  chat_component.cpp  chat_component.h  chat_event.h  chat_update.h  component_update.h  contact_deletion_component.cpp  contact_deletion_component.h  contact_listener.cpp  coord_event.h  create_event.h  damage_dealer_component.cpp  damage_dealer_component.h  deathmatch_component.cpp  deathmatch_component.h  frag_count_component.cpp  frag_count_component.h  hp_component.cpp  hp_component.h  icomponent.h  move_component.cpp  move_component.h  move_event.h  move_update.h  nickname_component.cpp  nickname_component.h  physics_component.cpp  physics_component.h  render_component.cpp  render_component.h  sound_component.cpp  (+18 more)
game_logic_source/variant/: variant_event.h  variant_map.h  vector_wrapper.h
gui_source/: gui.cpp  gui.h  render_window.h  scenes.cpp  scenes.h  singleton.h
network_source/: network.cpp  network.h
render_system/: game_gui_manager.cpp  light_manager.cpp  render_system.cpp  render_system.h  sound_manager.cpp  sound_manager.h
res/: divide_fragment_shader.txt  level1.json  level1.tmx  light_fragment_shader.txt  properties.xml  weapon_properties.xml  world_properties.xml
server_source/: level_loader.cpp  level_loader.h  main.cpp  server.cpp  server.h
test_source/: main.cpp  matrix_utils.cpp  matrix_utils.h  render_test.cpp  sound_test.cpp  test_suit.h
